--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,9 @@ version = "0.1.0"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
+ImageDraw = "4381153b-2b60-58ae-a1ba-fd683676385f"
 ImageProjectiveGeometry = "b9d14576-938f-5430-9d4c-b7d7de1409d6"
+ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
